@@ -4,14 +4,13 @@ design, Ethernet switch elements, user-level pcap/BPF elements
 
 Eddie Kohler
 eddietwo@lcs.mit.edu
-design, core, Linux /proc interface, standard elements, optimizer,
-documentation, other elements
+design, core, Linux /proc interface, standard elements, tools, documentation, 
+distribution, other elements
 
 Robert Morris
 rtm@lcs.mit.edu
-design, Ethernet elements, IP elements, Linux kernel module elements, radio
-elements, Linux kernel patches, IP router configuration, element
-documentation, other elements
+design, Ethernet, IP, Linux kernel module, and radio elements, Linux kernel 
+patches, IP router configuration, element documentation, other elements
 
 Alex Snoeren
 snoeren@lcs.mit.edu
