@@ -1,0 +1,2 @@
+Makefile *.d
+click-install
